@@ -1,3 +1,4 @@
+/.vscode
 /build
 /config.json
 /diagrams
